Make it so scoreboard doesnt break for everyone when one bug occurs.